# jarvis

./: .env.example  .gitignore  CLAUDE.md  PLUGIN_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package-lock.json  package.json  pyproject.toml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/components/: Chat.jsx  VoiceInterface.jsx
client/src/hooks/: useSocket.js
client/src/styles/: App.css  Chat.css  VoiceInterface.css  index.css
jarvis/: __init__.py  __main__.py  agent.py  config.py  database.py  models.py
jarvis/tools/: __init__.py  base.py  read_file.py  run_shell.py
server/: index.js
server/agents/: claude-agent.js
server/api/: conversation.js
server/config/: index.js
server/integrations/: example-plugin.js  plugin-manager.js
server/websocket/: index.js
